--- a/Tests/Test_Database/TestDatabaseApp/TestDatabaseApp.dproj
+++ b/Tests/Test_Database/TestDatabaseApp/TestDatabaseApp.dproj
@@ -6,7 +6,7 @@
         <MainSource>TestDatabaseApp.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Win32</Platform>
+        <Platform Condition="'$(Platform)'==''">Android</Platform>
         <TargetedPlatforms>1119</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
@@ -113,6 +113,7 @@
         <DCC_K>false</DCC_K>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Android)'!=''">
+        <VerInfo_Build>1</VerInfo_Build>
         <Android_LauncherIcon36>$(BDS)\bin\Artwork\Android\FM_LauncherIcon_36x36.png</Android_LauncherIcon36>
         <BT_BuildType>Debug</BT_BuildType>
         <Android_LauncherIcon72>$(BDS)\bin\Artwork\Android\FM_LauncherIcon_72x72.png</Android_LauncherIcon72>
@@ -322,10 +323,14 @@
             <Form>Form1</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="..\TestDatabaseService\uDMService.pas">
+            <Form>DM</Form>
+            <DesignClass>TAndroidService</DesignClass>
+        </DCCReference>
         <JavaReference Include="..\TestDatabaseService\Android\Debug\TestDatabaseService.jar">
             <Disabled/>
         </JavaReference>
-        <None Include="..\database\BusDB.s3db"/>
+        <None Include="..\database\BusDB2.s3db"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -352,12 +357,6 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="..\database\BusDB.s3db" Configuration="Debug" Class="ProjectFile">
-                    <Platform Name="Android">
-                        <RemoteDir>assets\internal\</RemoteDir>
-                        <Overwrite>false</Overwrite>
-                    </Platform>
-                </DeployFile>
                 <DeployFile LocalName="$(BDS)\bin\Artwork\Android\FM_LauncherIcon_36x36.png" Configuration="Debug" Class="Android_LauncherIcon36">
                     <Platform Name="Android">
                         <RemoteName>ic_launcher.png</RemoteName>
@@ -398,11 +397,18 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
+                <DeployFile LocalName="..\database\BusDB2.s3db" Configuration="Debug" Class="ProjectFile">
+                    <Platform Name="Android">
+                        <RemoteDir>.\assets\internal\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
                 <DeployFile LocalName="java\output\classes.dex" Configuration="Debug" Class="File">
                     <Platform Name="Android">
                         <RemoteDir>classes\</RemoteDir>
+                        <Enabled>false</Enabled>
                         <RemoteName>classes.dex</RemoteName>
-                        <Overwrite>false</Overwrite>
+                        <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
                 <DeployFile LocalName="Win32\Debug\TestDatabaseApp.exe" Configuration="Debug" Class="ProjectOutput">
@@ -435,7 +441,6 @@
                 </DeployFile>
                 <DeployFile LocalName="Android\Debug\classes.dex" Configuration="Debug" Class="AndroidClassesDexFile">
                     <Platform Name="Android">
-                        <Enabled>false</Enabled>
                         <RemoteName>classes.dex</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
